--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "./images/001.jpg"
-  name             : "Your Sidebar Name"
+  avatar           : "/images/001.jpg"
+  name             : "Boyuan Zheng"
   pronouns         : # example: "she/her"  
   bio              : " "
   location         : "Shanghai, China"
