--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/001.jpg"
+  avatar           : "/images/edit.jpg"
   name             : "Boyuan Zheng"
   pronouns         : # example: "she/her"  
   bio              : " "
