--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ locale                   : "en-US"
 site_theme               : "default"
 title                    : "My"
 title_separator          : "-"
-name                     : &name "Boyuan Zheng"
+name                     : &name "Weiyi Xue"
 description              : &description "personal description"
-url                      : https://nathandrake67.github.io/zhengby.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://weiyixue999.github.io/weiyixue.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -23,13 +23,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "001.png"
-  name             : "Boyuan Zheng"
+  name             : "Weiyi Xue"
   pronouns         : # example: "she/her"  
   bio              : " "
   location         : "Shanghai, China"
   employer         : "Tongji University"
   uri              : "https://www.tongji.edu.cn/"
-  email            : "2332885@tongji.edu.cn" 
+  email            : "xwy@tongji.edu.cn" 
 
   # Academic websites
   academia         : # URL
